# vetmanager-mcp

./: .env.example  .gitignore  AGENTS.md  AssumptionLog.md  CLAUDE.md  Dockerfile  LICENSE  README.md  Roadmap.md  SECURITY.md  activation_events.py  activation_telemetry.py  agent_feedback_service.py  alembic.ini  auth_audit.py  bearer_auth.py  bearer_rate_limiter.py  bearer_token_manager.py  depersonalization.py  docker-compose.yml  domain_validation.py  env_utils.py  error_tracking.py  exceptions.py  filters.py  host_resolver.py  host_validation.py  landing_page.py  oauth_challenge.py  oauth_metadata.py  oauth_service.py  observability_logging.py  privacy_utils.py  prompts.py  pyproject.toml  pytest.ini  rate_limit_backend.py  request_auth.py  request_cache.py  request_context.py  (+31 more)
.playwright-mcp/: page-2026-03-31T18-32-08-342Z.yml  page-2026-03-31T18-32-24-561Z.yml  page-2026-03-31T18-33-31-213Z.yml  page-2026-03-31T18-33-45-771Z.yml  page-2026-03-31T18-34-04-110Z.yml
PRD/: stage-178-chatgpt-oauth-personal-data-privacy.md  stage-54-2-redis.md  stage-57-deploy-safety.md  stage-58-dependency-pinning.md  stage-59-web-refactor.md  stage-76-get-inactive-pets.md  stage-77-inactive-clients-pets.md  этап-1-каркас.md  этап-10-variant-a-mcp-config.md  этап-100-security-hardening.md  этап-103-architecture-consolidation.md  этап-103a-auth-package.md  этап-103c-resources-gateway.md  этап-103d-vm-transport-split.md  этап-104-workflow-discipline.md  этап-11-variant-a-implementation.md  этап-110-product-metrics.md  этап-111-blocker-cleanup.md  этап-112-observability-integrity.md  этап-113-resilience-completeness.md  этап-113b-breaker-pool-concurrency-hardening.md  этап-114-simplicity-debt.md  этап-114b-simplicity-debt-follow-up.md  этап-115-real-concurrency-tests.md  этап-116-prd110-completion.md  этап-117-docs-catchup.md  этап-118-product-metrics-correctness-follow-up.md  этап-119-test-isolation-workflow-docs-cleanup.md  этап-12-headers-only-security.md  этап-120-historical-prd-goal-section-backfill.md  этап-121-roadmap-status-sync-cleanup.md  этап-122-vm-api-payload-contract-hotfix.md  этап-123-contract-tests-and-mutation-unhappy-path.md  этап-124-async-redis-rate-limit-backend.md  этап-125-perf-nplus1-and-free-slot-correctness.md  этап-126-auth-probe-service-hardening.md  этап-127-docs-drift-cleanup.md  этап-128-final-release-and-deploy.md  этап-128.3-pre-release-checklist.md  этап-129.1-inactive-pets-batched-pagination.md  (+169 more)
alembic/: env.py
artifacts/: api-research-notes-ru.md  api_crud_permissions-ru.md  api_entity_reference-ru(с синонимами).md  api_entity_reference-ru.md  architecture-review-vetmanager-mcp-ru.md  observability-runbook-vetmanager-mcp-ru.md  openapi-diff-2026-06-15-remote-vs-local.md  operations-readiness-vetmanager-mcp-ru.md  prd-vetmanager-mcp-ru.md  release-checklist-vetmanager-mcp-ru.md  report-ai-mcp-research-2026-06-15.md  report-ai-prompt-helper-short-mcp-2026-06-15.md  report-ai-queued-diagnostics-runbook.md  runbook-operator-ip-mask.md  security-deployment-notes-vetmanager-mcp-ru.md  security-threat-model-vetmanager-mcp-ru.md  stage169-invoice-goods-contract.md  stage173-chatgpt-oauth-research.md  vetmanager_openapi_v6.json  (+3 more)
(+242 files in other folders)
