[project]
name = "vetmanager-mcp"
version = "0.1.0"
description = "MCP server for Vetmanager REST API"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.13.0",
    "cryptography>=46.0.0",
    "fastmcp>=2.0.0",
    "httpx>=0.27.0",
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.20.0",
    "asyncpg>=0.29.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tools"]

[dependency-groups]
dev = [
    "playwright>=1.54.0,<2",
    "pytest>=8.0.0,<9",
    "pytest-asyncio>=0.23.0,<0.24",
    "pytest-httpx>=0.30.0",
    "respx>=0.21.0",
]
