[project]
name = "vetmanager-mcp"
version = "0.1.0"
description = "MCP server for Vetmanager REST API"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.13.0",
    "cryptography>=46.0.0",
    "fastmcp>=3.1.0,<4",
    "httpx>=0.27.0",
    "sentry-sdk>=2.0.0",
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.20.0",
    "asyncpg>=0.29.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = [
    "alembic",
    "agent_feedback_service.py",
    "auth",
    "auth_audit.py",
    "bearer_auth.py",
    "bearer_rate_limiter.py",
    "bearer_token_manager.py",
    "depersonalization.py",
    "domain_validation.py",
    "env_utils.py",
    "error_tracking.py",
    "exceptions.py",
    "filters.py",
    "host_resolver.py",
    "host_validation.py",
    "landing_page.py",
    "observability_logging.py",
    "prompts.py",
    "rate_limit_backend.py",
    "request_auth.py",
    "request_cache.py",
    "request_context.py",
    "request_credentials.py",
    "resources",
    "runtime_auth.py",
    "secret_manager.py",
    "server.py",
    "service_metrics.py",
    "service_token_service.py",
    "storage.py",
    "storage_models.py",
    "structured_logging.py",
    "test_contours.py",
    "token_cleanup.py",
    "token_scopes.py",
    "tool_access_registry.py",
    "tool_descriptions.py",
    "tools",
    "validators.py",
    "vetmanager_auth.py",
    "vetmanager_client.py",
    "vetmanager_connection_service.py",
    "vm_datetime.py",
    "vm_transport",
    "warning_policy.py",
    "web.py",
    "web_auth.py",
    "web_html.py",
    "web_routes_account.py",
    "web_routes_auth.py",
    "web_routes_system.py",
    "web_security.py",
]

[dependency-groups]
dev = [
    "playwright>=1.54.0,<2",
    "pytest>=8.0.0,<9",
    "pytest-asyncio>=0.23.0,<0.24",
    "pytest-httpx>=0.30.0",
    "respx>=0.21.0",
]
